# Rust-good-bad-ugly

./: .gitignore  AGENTS.md  FEATURE_MAP.md  README.md  SETUP.md  environment.yml  mkdocs-landing.yml  mkdocs.yml
.github/workflows/: pages.yml
docs/: README.md  _config.yml  control-flow-and-program-structure.md  integrated-numerical-example-julia-set.md  integrated-numerical-example-n-body-simulation.md  learning-module-structure.md  randomness-and-reproducible-runs.md  reusable-abstractions-with-traits.md  scalar-computation-and-numeric-basics.md
docs/learning-modules/: collections-iterators-and-text-data.md  control-flow-and-program-structure.md  data-modeling-with-structs-and-methods.md  error-handling.md  getting-started-with-rust-projects.md  index.html  index.md  integrated-numerical-example-n-body-simulation.md  learning-module-structure.md  ownership-borrowing-and-mutation.md  project-organization-libraries-and-tests.md  scalar-computation-and-numeric-basics.md
docs/learning-modules-site/: 404.html  index.html  search.html
docs/slides/: rust-good-bad-ugly.html
learning-modules/: collections-iterators-and-text-data.md  control-flow-and-program-structure.md  data-parallelism-with-rayon.md  learning-module-structure.md  scalar-computation-and-numeric-basics.md
pages/: README.md  _config.yml  index.html  index.md  styles.css
scripts/: link_source_code_refs.py
skills/rust-scicomp-quarto-slides/: SKILL.md
slides-source/: 00-learning-modules-overview.qmd  01-getting-started-with-rust-projects.qmd  02-scalar-computation-and-numeric-basics.qmd  03-control-flow-and-program-structure.qmd  04-ownership-borrowing-and-mutation.qmd  05-data-modeling-with-structs-and-methods.qmd  06-reusable-abstractions-with-traits.qmd  07-collections-iterators-and-text-data.qmd  08-error-handling.qmd  09-project-organization-libraries-and-tests.qmd  10-randomness-and-reproducible-runs.qmd  11-data-parallelism-with-rayon.qmd  12-integrated-numerical-example-julia-set.qmd  13-integrated-numerical-example-n-body-simulation.qmd  _quarto.yml  ecosystem.qmd  finally.qmd  motivation.qmd  preview.sh  rust-good-bad-ugly.qmd  styles.css
source-code/: .gitignore  README.md
source-code/basic-types/: Cargo.toml  README.md
source-code/borrowing-vectors/: Cargo.toml  README.md
source-code/complex-numbers/: Cargo.toml  README.md
source-code/control-flow/: README.md
source-code/copy-vs-move/: Cargo.toml  README.md
source-code/cpp-pitfalls/: CMakeLists.txt  README.md  buffer_overflow.cpp  dangling_pointer.cpp  data_race.cpp  double_free.cpp  double_promotion.cpp  memory_leak.cpp  uninitialized_read.cpp  use_after_free.cpp
source-code/enum-match/: Cargo.toml  README.md
source-code/error-handling/: Cargo.toml  README.md
source-code/generic-matrix/: Cargo.toml  README.md
source-code/hashmap-hashset/: Cargo.toml  README.md  data.txt  errors.txt
source-code/hashmap-hashset/src/: count-nucleotides.rs  generate-data.rs  lib.rs  read-errors.rs
source-code/julia-set/julia-set-cpp/: CMakeLists.txt  README.md
source-code/julia-set/julia-set-cpp/src/: main.cpp  matrix.h
source-code/n-body-simulation/cpp/: CMakeLists.txt  README.md
source-code/n-body-simulation/cpp/src/: main.cpp  system.cpp  system.h
(+127 files in other folders)
